fixing alignment

--- a/Mirror/src/App.scss
+++ b/Mirror/src/App.scss
@@ -87,7 +87,7 @@ body {
 
   h1, h2 {
     width: max-content; 
-    margin: 0 auto; 
+    
   }
   
   h1 {
@@ -179,6 +179,7 @@ body {
     background-color: white;
     padding: 10px;
     border-radius: 15px;
+    height: 25%;
 
    i {
     margin-right: 5px;
